# pic-blas

./: .gitignore  CMakeLists.txt  README.md  fpm.toml
.github/workflows/: CICD.yml
app/: main.f90
cmake/: pic-blasConfig.cmake.in
cmake/modules/: Findpic.cmake  Findtest-drive.cmake
src/blas/: CMakeLists.txt  pic_blas_interfaces.F90
src/lapack/: CMakeLists.txt  pic_lapack_interfaces.F90
test/: CMakeLists.txt  main_tests.f90  test_pic_blas_asum.f90  test_pic_blas_axpy.f90  test_pic_blas_copy.f90  test_pic_blas_dgemm.f90  test_pic_blas_dgemv.f90  test_pic_blas_dot.f90  test_pic_blas_iamax.f90  test_pic_blas_scal.f90  test_pic_blas_sgemm.f90  test_pic_blas_sgemv.f90  test_pic_lapack_gesvd.f90  test_pic_lapack_syev.f90  test_pic_lapack_syevd.f90
